# DirectMethod

./: README
include/: edge_se3expmap_direct.h
src/: CMakeLists.txt  bilinear_interpolation.cpp  direct_semidense.cpp  direct_sparse.cpp  direct_sparse_gx.cpp  edge_se3expmap_direct.cpp
